CSS/intro.css
#selfintro {
    display: block;
    padding-top: 30px;
    margin-left: auto;
    margin-right: auto;
    width: 60%;
    height: auto;
    overflow: hidden;
}

#introleft{
    width: 50%;
    float: left;
    height: fit-content;
}

#pic{
    margin-left: 50px;
    width: 70%;
    border-radius: 5%;
    height: fit-content;
}

#socials{
    float: left;
    float: bottom;
}

#socials li{
    display: inline;
    list-style-type: none;
}

#socials img{
    width: 15%;
    padding-inline: 2%;
}

#introright{
    width: 50%;
    float: right;
    height: fit-content;
}

#introright p{
    display: inline;
}

#content-nav{
    background-color: #fef8c66c;
    height: 50px;
    width: 65%;;
    font-size: 20px;
    font-family: 'Inconsolata', 'Dosis', monospace;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    border-style: outset;
    border-radius: 0.5cm;
    border-width: 0.5px;
}

#content-nav a{
    padding-top: 10px;
}

